# LAHack2026

./: .env  .env.example  .gitignore  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  pyproject.toml
backend/: main.py
backend/shared/: __init__.py  imentiv.py  word_analysis.py
backend/shared/ai/: __init__.py  service.py  settings.py
backend/shared/db/: __init__.py  client.py  media_store.py  repository.py  schemas.py  settings.py  tasks.py
backend/sprint/: api.py  main.py
backend/sprint/phase_a/: __init__.py  elevenlabs.py  gemma.py  graph.py  imentiv.py  schemas.py  session_manager.py
backend/sprint/phase_b/: __init__.py  elevenlabs.py  gemma.py  graph.py  imentiv.py  prompts.py  schemas.py  session_manager.py
backend/sprint/phase_c/: __init__.py  broker.py  constants.py  elevenlabs.py  gemma.py  graph.py  imentiv.py  schemas.py  session_manager.py
frontend/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Sidebar.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/src/: index.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/auth/: AuthGate.tsx  AuthProvider.tsx  LoginModal.tsx  mock-auth.ts
frontend/src/hooks/: useSessions.ts  (+4 more)
imentiv/: __init__.py  client.py  exceptions.py
tests/: test_ai_setup.py  test_imentiv_integration.py  test_imentiv_preprocessing.py  test_persistence.py  test_phase_a_gemma.py  test_phase_a_merge.py  test_phase_b_api.py  test_phase_b_elevenlabs.py  test_phase_b_graph.py  test_phase_b_session_manager.py  test_phase_b_validation.py  test_phase_c_api.py  test_phase_c_broker.py  test_tts_settings_api.py
(+45 files in other folders)
