[project]
name = "lahacks26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs",
    "fastapi",
    "httpx",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "openai",
    "pydantic-settings",
    "python-multipart",
    "python-dotenv",
    "uvicorn",
    "grandalf>=0.8",
]
