[project]
name = "lahacks26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs",
    "fastapi",
    "httpx",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "motor",
    "openai",
    "pydantic-settings",
    "python-multipart",
    "python-dotenv",
    "requests",
    "uvicorn",
    "grandalf>=0.8",
]

[tool.setuptools.packages.find]
include = ["backend*", "imentiv*"]
exclude = ["frontend*", "tests*", "vendor*"]
