[project]
name = "lahacks26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi",
    "elevenlabs",
    "fastapi",
    "google-genai",
    "httpx",
    "langchain",
    "langchain-core",
    "langgraph",
    "motor",
    "pydantic-settings",
    "python-multipart",
    "python-dotenv",
    "pytest",
    "requests",
    "uvicorn",
    "grandalf>=0.8",
]

[tool.setuptools.packages.find]
include = ["backend*", "imentiv*"]
exclude = ["frontend*", "tests*", "vendor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
